[package]
name = "zfs"
version = "0.1.0"
edition = "2021"

[lib]
name = "zfs"
path = "src/lib.rs"

[features]
default = ["std"]
std = []

[[bin]]
name = "zfs"
path = "src/main.rs"

[dependencies]
sha2 = { version = "0.10.6", default-features = false, features = ["force-soft"] }
strum = { version = "0.24", default-features = false, features = ["derive"] }
