[package]
name = "zfs"
version = "0.1.0"
edition = "2021"

[lib]
name = "zfs"
path = "src/lib.rs"

[features]
default = ["std"]
std = []

[[bin]]
name = "zfs"
path = "src/main.rs"

[dependencies]
enum-as-inner = { version = "0.6.0" }
fixedstr = { version = "0.4.0", default-features = false }
num = { "version" = "0.4.0", default-features = false }
num-derive = { "version" = "0.3.3", default-features = false }
num-traits = { "version" = "0.2.15", default-features = false }
sha2 = { version = "0.10.6", default-features = false, features = ["force-soft"] }
strum = { version = "0.24", default-features = false, features = ["derive"] }
